feat: implement outbound map component with interactive features and data integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["chartdiv", "Munnar", "Thekkady"]
+  "cSpell.words": ["amcharts", "chartdiv", "geodata", "Munnar", "Thekkady"]
 }
