--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["amcharts", "chartdiv", "geodata", "Munnar", "Thekkady"]
+  "cSpell.words": ["amcharts", "chartdiv", "geodata", "Munnar", "prerenderable", "Thekkady"]
 }
