--- a/angular.json
+++ b/angular.json
@@ -57,10 +57,7 @@
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
-              "entry": "src/server.ts",
-              "prerender": {
-                "exclude": ["/inbound/:state"]
-              }
+              "entry": "src/server.ts"
             }
           },
           "configurations": {
@@ -77,12 +74,7 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all",
-              "ssr": {
-                "prerender": {
-                  "exclude": ["/inbound/:state"]
-                }
-              }
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
