--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.2",
+    "@omnedia/ngx-shine-border": "^3.0.0",
     "aos": "^2.3.4",
     "express": "^5.1.0",
     "primeicons": "^7.0.0",
