--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/ssr": "^20.3.2",
     "@omnedia/ngx-shine-border": "^3.0.0",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
     "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
