--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "kursor": "^0.1.6",
     "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
