--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.2",
     "@omnedia/ngx-shine-border": "^3.0.0",
+    "@omnedia/ngx-typewriter": "^3.1.1",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
