--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,6 @@ on:
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
 
 jobs:
   build-and-deploy:
@@ -22,15 +20,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
       - name: Install dependencies 📦
         run: npm ci
 
       - name: Build Angular app 🏗️
-        run: npm run build -- --base-href "https://ashik-ch.github.io/idt-world/"
+        run: |
+          npm run build -- --base-href=/idt-world/
+
+      - name: Add 404.html for SPA routing
+        run: |
+          cp dist/idt-world/browser/index.html dist/idt-world/browser/404.html
 
       - name: Deploy to GitHub Pages 🚀
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/idt-world/browser
+          publish_dir: dist/idt-world/browser
