--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/",
               "budgets": [
                 {
                   "type": "initial",
