--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,7 @@ jobs:
         run: npm ci
 
       - name: Build Angular app 🏗️
-        run: |
-          npm run build -- --base-href=/idt-world/
+        run: npm run build
 
       - name: Add 404.html for SPA routing
         run: |
